feat: Admin page (dashboard, member management, product editing/deletion) implementation complete